<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.xenei</groupId>
	<artifactId>PA4RDF</artifactId>
	<version>2.0-SNAPSHOT</version>
	<scm>
		<connection>scm:git:git@github.com:Claudenw/PA4RDF.git</connection>
		<developerConnection>scm:git:git@github.com:Claudenw/PA4RDF.git</developerConnection>
		<url>https://github.com/Claudenw/PA4RDF</url>
	</scm>
	<distributionManagement>
		<site>
			<id>Github site</id>
			<!-- <url>scm:git:ssh://git@github.com/claudenw/PA4RDF.gitv-->
			<url>scm:svn:https://github.com/Claudenw/PA4RDF</url>
		</site>
		<snapshotRepository>
			<id>sonatype-nexus-snapshots</id>
			<name>Sonatype Nexus Snapshots</name>
			<url>${sonatypeOssDistMgmtSnapshotsUrl}</url>
		</snapshotRepository>
		<repository>
			<id>sonatype-nexus-staging</id>
			<name>Nexus Release Repository</name>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>

	</distributionManagement>
	<name>Persistence Annotations 4 RDF</name>
	<url>http://claudenw.github.com/PA4RDF</url>
	<inceptionYear>2012</inceptionYear>
	<organization>
		<name>XENEI.org</name>
	</organization>
	<description>Persistence Annotation for RDF (PA4RDF) is a set of annotations and an entity 
	manager that provides JPA like functionality on top of an RDF store while accounting for 
	and exploiting the fundamental differences between graph storage and relational storage. 
	PA4RDF introduces three (3) annotations that map a RDF triple (subject, predicate, object) 
	to a Plain Old Java Object (POJO) using Java's dynamic proxy capabilities.</description>
	<licenses>
		<license>
			<name>The Apache Software License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
			<comments>A business-friendly OSS license</comments>
		</license>
	</licenses>
	<parent>
		<groupId>org.sonatype.oss</groupId>
		<artifactId>oss-parent</artifactId>
		<version>9</version>
	</parent>
	<issueManagement>
		<system>GitHub Issues</system>
		<url>https://github.com/Claudenw/PA4RDF/issues</url>
	</issueManagement>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<jena_version>3.7.0-SNAPSHOT</jena_version>
	</properties>
<!-- 	<repositories> -->
<!-- 		<repository> -->
<!-- 			<id>apache-repo-snapshot</id> -->
<!-- 			<url>https://repository.apache.org/content/repositories/snapshots</url> -->
<!-- 		</repository> -->
<!-- 	</repositories> -->
	<profiles>
		<profile>
			<id>release-sign-artifacts</id>
			<activation>
				<property>
					<name>performRelease</name>
					<value>true</value>
				</property>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<configuration>
							<keyname>Xenei.com</keyname>
						</configuration>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.8.1</version>
				<configuration />

			</plugin>
		</plugins>
	</reporting>
	<dependencies>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-proxy</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.1</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
		</dependency>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.16</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>cglib</groupId>
			<artifactId>cglib</artifactId>
			<version>3.2.5</version>
		</dependency>
		<dependency>
			<groupId>org.apache.jena</groupId>
			<artifactId>apache-jena</artifactId>
			<version>${jena_version}</version>
			<type>pom</type>
		</dependency>
		<dependency>
			<groupId>commons-logging</groupId>
			<artifactId>commons-logging</artifactId>
			<version>1.2</version>
		</dependency>
		<dependency>
			<groupId>org.apache.jena</groupId>
			<artifactId>jena-querybuilder</artifactId>
			<version>${jena_version}</version>
		</dependency>
		<dependency>
			<groupId>org.xenei</groupId>
			<artifactId>junit-contracts</artifactId>
			<version>0.2.0-SNAPSHOT</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.jena</groupId>
			<artifactId>jena-core</artifactId>
			<version>${jena_version}</version>
			<scope>test</scope>
			<type>test-jar</type>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-all</artifactId>
			<version>1.9.5</version>
			<scope>test</scope>
		</dependency>
		<dependency>
  <groupId>org.apache.jena</groupId>
  <artifactId>jena-fuseki-embedded</artifactId>
  <scope>test</scope>
  <version>${jena_version}</version> <!-- Set the version -->
</dependency>
		<dependency>
			<groupId>org.xenei</groupId>
			<artifactId>rdf-diff-patch</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>
	</dependencies>
	<build>
<!-- 	<extensions> -->
<!--       <extension> -->
<!--         <groupId>org.apache.maven.wagon</groupId> -->
<!--         <artifactId>wagon-scm</artifactId> -->
<!--         <version>2.8</version> -->
<!--       </extension> -->
<!--       <extension> -->
<!--         <groupId>org.apache.maven.scm</groupId> -->
<!--         <artifactId>maven-scm-manager-plexus</artifactId> -->
<!--         <version>1.3</version> -->
<!--       </extension> -->
<!--       <extension> -->
<!--         <groupId>org.apache.maven.scm</groupId> -->
<!--         <artifactId>maven-scm-provider-gitexe</artifactId> -->
<!--         <version>1.9.2</version> -->
<!--       </extension> -->
<!--     </extensions> -->
		<plugins>
			<plugin>
				<groupId>org.codehaus.plexus</groupId>
				<artifactId>plexus-maven-plugin</artifactId>
				<version>1.3.8</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<configuration>
					<goals>deploy site site-deploy</goals>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-repository-plugin</artifactId>
				<version>2.3.1</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.2.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.5.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.8.1</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>license-maven-plugin</artifactId>
				<version>1.3</version>
				<configuration>
					<addSvnKeyWords>true</addSvnKeyWords>
					<licenseName>apache_v2</licenseName>
					<roots>
						<root>src/main/java</root>
						<root>src/test</root>
					</roots>
					<includes>
						<include>*.java</include>
					</includes>
				</configuration>
				<executions>
					<execution>
						<id>first</id>
						<goals>
							<goal>update-file-header</goal>
						</goals>
						<phase>process-sources</phase>
					</execution>
					<execution>
						<goals>
							<goal>check-file-header</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<version>3.3</version>
				<configuration>
					<skipDeploy>true</skipDeploy>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>org.apache.maven.doxia</groupId>
						<artifactId>doxia-module-markdown</artifactId>
						<version>1.6</version>
					</dependency>
					<dependency>
						<groupId>org.apache.maven.wagon</groupId>
						<artifactId>wagon-ssh</artifactId>
						<version>2.8</version>
					</dependency>
					<dependency>
                        <groupId>org.apache.maven.wagon</groupId>
                        <artifactId>wagon-scm</artifactId>
                        <version>2.8</version>
                    </dependency>
				</dependencies>
			</plugin>
<!-- 			<plugin> -->
<!--       <groupId>org.apache.maven.plugins</groupId> -->
<!--       <artifactId>maven-scm-publish-plugin</artifactId> -->
<!--       <version>1.1</version> -->
<!--       <configuration> -->
<!--         <scmBranch>gh-pages</scmBranch> -->
<!--       </configuration> -->
<!--       <executions> -->
<!--       <execution> -->
<!--             <id>scm-publish</id> -->
<!--             <phase>site-deploy</phase> -->
<!--             <goals> -->
<!--               <goal>publish-scm</goal> -->
<!--             </goals> -->
<!--           </execution> -->
<!--       </executions> -->
<!--     </plugin> -->
			<plugin>
				<groupId>com.github.github</groupId>
				<artifactId>site-maven-plugin</artifactId>
				<version>0.11</version>
				<executions>
					<execution>
						<goals>
							<goal>site</goal>
						</goals>
						<phase>site-deploy</phase>
						<configuration>
							<server>github</server>
							<message>Generated site for ${project.version}</message>						
							<path>${project.version}</path>
							<merge>true</merge>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<!--This plugin's configuration is used to store Eclipse m2e settings 
					only. It has no influence on the Maven build itself. -->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>
											org.codehaus.mojo
										</groupId>
										<artifactId>
											license-maven-plugin
										</artifactId>
										<versionRange>
											[1.3,)
										</versionRange>
										<goals>
											<goal>
												update-file-header
											</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore />
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
</project>
